feat: support theme

--- a/HexBox.WinUI.Demo/App.xaml
+++ b/HexBox.WinUI.Demo/App.xaml
@@ -10,7 +10,10 @@
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
-            <!-- Other app resources here -->
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary Source="/Themes/LightTheme.xaml" x:Key="Light" />
+                <ResourceDictionary Source="/Themes/DarkTheme.xaml" x:Key="Dark"/>
+            </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
