--- a/HexBox.WinUI/Themes/DarkTheme.xaml
+++ b/HexBox.WinUI/Themes/DarkTheme.xaml
@@ -2,11 +2,11 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <SolidColorBrush x:Key="AddressBrush"
-                        Color="#DEE4E7" />
+                     Color="#DEE4E7" />
     <SolidColorBrush x:Key="AlternatingDataColumnTextBrush"
-                     Color="#ffdbc9" />
+                     Color="#3ff23f" />
     <SolidColorBrush x:Key="SelectionBrush"
-                     Color="#eaddff" />
+                     Color="LightPink" />
     <SolidColorBrush x:Key="SelectionTextBrush"
                      Color="#222222" />
     <SolidColorBrush x:Key="Background"
